# onecli

./: .dockerignore  .env.example  .gitignore  .prettierignore  CACHE_KEY_DESIGN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REDIS_CACHE_README.md  package.json  pnpm-lock.yaml  skills-lock.json  summary.md  turbo.json
.github/: pull_request_template.md
.github/actions/setup-node/: action.yml
.github/workflows/: ci.yml  publish.yml  release.yml
.husky/: pre-push
apps/gateway/: Cargo.toml  build.rs  package.json
apps/gateway/src/: approval.rs  apps.rs  auth.rs  budget.rs  ca.rs  cache.rs  cloud_apps.rs  cloud_summary.rs  connect.rs  crypto.rs  db.rs  edition.rs  ee_apps.rs  gateway.rs  inject.rs  jwks.rs  main.rs  notify.rs  partner.rs  policy.rs  policy_engine.rs  remote.rs  remote_api.rs  remote_mapping.rs  remote_store.rs  secret_inject.rs  summary.rs  telemetry.rs  telemetry_core.rs  version.rs
apps/gateway/tests/: integration.rs
apps/proxy/: Cargo.toml  package.json
apps/proxy/src/: ca.rs  connect.rs  inject.rs  main.rs  proxy.rs
apps/proxy/tests/: integration.rs
apps/web/: entrypoint.sh  next.config.js  package.json  vitest.config.ts
apps/web/src/: proxy.ts  (+1 more)
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  onecli-vault-prod-entrypoint.sh  quick-agent.sh
docker/vault/: init-prod.sh  vault-prod.hcl
docs/: airbyte-self-managed.md  nadir-integration.md  nanoclaw-integration.md  onepassword-macos-setup.md  self-hosted-connectors.md  vault-integration.md
scripts/: install.sh  sbom-crypto-audit.sh
(+482 files in other folders)
